# baby-smith

./: .env.template  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.bot  Dockerfile.dashboard  License  README.md  README_SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
src/agent_smith/: __init__.py  agent.py  check_balance.py  config.py  dashboard.py  logging_utils.py  main.py  metrics.py  rate_limit.py  trading_types.py
src/agent_smith/core/: __init__.py  market_data.py  order_manager.py  position_manager.py  trading_engine.py
src/agent_smith/dashboard/: __init__.py  chart_components.py  data_fetchers.py  main.py  ui_components.py
src/agent_smith/exceptions/: __init__.py  trading_exceptions.py
src/agent_smith/strategies/: __init__.py  base.py  enhanced_market_maker.py  market_maker.py  momentum_analyzer.py  order_utils.py  position_reducer.py  risk_manager.py
